# nanogpt-from-scratch

./: README.md  notebook.ipynb  notebookv2.ipynb  pyproject.toml
